--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ img {
     height: 80px; 
     width: 80px;
     padding: 10px;
+    padding-bottom: 20px;
 }
 
 .name {
@@ -61,7 +62,7 @@ img {
 
 button {
     padding: 12px; 
-    font-size: 12px; 
+    font-size: 14px; 
     font-weight: 600;
     color: hsl(0, 0%, 100%);
     background-color: hsl(0, 0%, 18%);
